# Script-JSON-Conversion-Evaluation-System

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_QUICKSTART.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  剧本大纲转JSON业务流程文档.md  剧本大纲转JSON技术实现文档.md
code-samples/: deepseek_client.py  test_system.py
configs/: deepseek_config.yaml  default_config.yaml  evaluation_weights.yaml
docs/: BATCH_TEST_RESULTS_2025-11-01.md  OPTIMIZATION_SUMMARY_2025-11-01.md  docker_guide.md  project_structure.md  quick_start_guide.md  script_eval_development_checklist.md
prompts/: boundary_evaluation.txt  scene1_extraction.txt  scene2_extraction.txt  semantic_evaluation.txt
ref/: api-reference.md  architecture.md  bug-fixes-reference.md  development.md  models-reference.md  project-overview.md  scripts-guide.md  testing-reference.md  utils-reference.md
script_examples/: 测试1.md
script_examples/outlines/: outline_01_time_traveler.md
script_examples/scripts/: script_02_palace_tech.md  script_03_cultivation_tech.md  script_04_ecommerce_ancient.md  script_05_yunyangyi_ep07.md  script_06_yunyangyi_ep03.md  script_07_yunyangyi_ep10.md  script_08_yunyangyi_ep02.md  script_09_yunyangyi_ep08.md  script_10_yunyangyi_ep12.md  script_11_yunyangyi_ep06.md  script_12_yunyangyi_ep04.md  script_13_yunyangyi_ep11.md  script_14_yunyangyi_ep01.md  script_15_yunyangyi_ep05.md  script_16_yunyangyi_ep09.md
scripts/: batch_test_all_scripts.py  convert_outline_to_json.py  convert_script_to_json.py  docker-entrypoint.sh  quick-start-docker.sh  run_full_evaluation.py  run_outline_evaluation.py  test_single_large_file.py  test_system.py
src/evaluators/: main_evaluator.py
src/llm/: deepseek_client.py
src/metrics/: deepeval_metrics.py
src/models/: scene_models.py
src/utils/: exceptions.py  file_handler.py  logger.py  performance.py
tests/unit/: test_deepeval_metrics.py  test_deepseek_client.py  test_exceptions.py  test_logger.py  test_performance.py  test_scene_models.py
